--- a/SSE.dist
+++ b/SSE.dist
@@ -2,34 +2,34 @@
 # http://www.openengine.dk/wiki/Projects/SSE
 
 # main repository
-darcs / http://openengine.dk/code/branches/SSE
-darcs-dev / fh.daimi.au.dk:/users/cgd/code/branches/SSE
+git / https://github.com/OpenEngineDK/branches-SSE.git
+git-dev / git@github.com:OpenEngineDK/branches-SSE.git
 
 # project repository
 # (uncomment the following two lines after uploading your project)
-darcs /projects/SSE http://openengine.dk/code/projects/SSE
-darcs-dev /projects/SSE fh.daimi.au.dk:/users/cgd/code/projects/SSE
+git /projects/SSE https://github.com/OpenEngineDK/projects-SSE.git
+git-dev /projects/SSE git@github.com:OpenEngineDK/projects-SSE.git
 
 # required extensions
-darcs /extensions/SetupHelpers           http://openengine.dk/code/extensions/SetupHelpers
-darcs /extensions/HUD                    http://openengine.dk/code/extensions/HUD
-darcs /extensions/SDL                    http://openengine.dk/code/extensions/SDL
-darcs /extensions/SDLImage               http://openengine.dk/code/extensions/SDLImage
-darcs /extensions/CairoResource          http://openengine.dk/code/extensions/CairoResource
-darcs /extensions/OpenGLRenderer         http://openengine.dk/code/extensions/OpenGLRenderer
-darcs /extensions/TGAResource            http://openengine.dk/code/extensions/TGAResource
-darcs /extensions/OBJResource            http://openengine.dk/code/extensions/OBJResource
-darcs /extensions/AccelerationStructures http://openengine.dk/code/extensions/AccelerationStructures
+git /extensions/SetupHelpers           https://github.com/OpenEngineDK/extensions-SetupHelpers.git
+git /extensions/HUD                    https://github.com/OpenEngineDK/extensions-HUD.git
+git /extensions/SDL                    https://github.com/OpenEngineDK/extensions-SDL.git
+git /extensions/SDLImage               https://github.com/OpenEngineDK/extensions-SDLImage.git
+git /extensions/CairoResource          https://github.com/OpenEngineDK/extensions-CairoResource.git
+git /extensions/OpenGLRenderer         https://github.com/OpenEngineDK/extensions-OpenGLRenderer.git
+git /extensions/TGAResource            https://github.com/OpenEngineDK/extensions-TGAResource.git
+git /extensions/OBJResource            https://github.com/OpenEngineDK/extensions-OBJResource.git
+git /extensions/AccelerationStructures https://github.com/OpenEngineDK/extensions-AccelerationStructures.git
 
-darcs-dev /extensions/SetupHelpers           fh.daimi.au.dk:/users/cgd/code/extensions/SetupHelpers
-darcs-dev /extensions/HUD                    fh.daimi.au.dk:/users/cgd/code/extensions/HUD
-darcs-dev /extensions/SDL                    fh.daimi.au.dk:/users/cgd/code/extensions/SDL
-darcs-dev /extensions/SDLImage               fh.daimi.au.dk:/users/cgd/code/extensions/SDLImage
-darcs-dev /extensions/CairoResource          fh.daimi.au.dk:/users/cgd/code/extensions/CairoResource
-darcs-dev /extensions/OpenGLRenderer         fh.daimi.au.dk:/users/cgd/code/extensions/OpenGLRenderer
-darcs-dev /extensions/TGAResource            fh.daimi.au.dk:/users/cgd/code/extensions/TGAResource
-darcs-dev /extensions/OBJResource            fh.daimi.au.dk:/users/cgd/code/extensions/OBJResource
-darcs-dev /extensions/AccelerationStructures fh.daimi.au.dk:/users/cgd/code/extensions/AccelerationStructures
+git-dev /extensions/SetupHelpers           git@github.com:OpenEngineDK/extensions-SetupHelpers.git
+git-dev /extensions/HUD                    git@github.com:OpenEngineDK/extensions-HUD.git
+git-dev /extensions/SDL                    git@github.com:OpenEngineDK/extensions-SDL.git
+git-dev /extensions/SDLImage               git@github.com:OpenEngineDK/extensions-SDLImage.git
+git-dev /extensions/CairoResource          git@github.com:OpenEngineDK/extensions-CairoResource.git
+git-dev /extensions/OpenGLRenderer         git@github.com:OpenEngineDK/extensions-OpenGLRenderer.git
+git-dev /extensions/TGAResource            git@github.com:OpenEngineDK/extensions-TGAResource.git
+git-dev /extensions/OBJResource            git@github.com:OpenEngineDK/extensions-OBJResource.git
+git-dev /extensions/AccelerationStructures git@github.com:OpenEngineDK/extensions-AccelerationStructures.git
 
 # windows libraries
 win32 /libraries http://openengine.dk/data/libraries/boost-win32.zip
